fix alignment issue with boxes in experiment design

--- a/html_app/ui/gen/experiment_design.gss.css
+++ b/html_app/ui/gen/experiment_design.gss.css
@@ -154,7 +154,6 @@
   border-color: #b9b9b9;
   background: white;
   border-width: 3px;
-  top: -2px;
   left: -2px;
   padding-right: 16px;
   padding-bottom: 4px;
